--- a/jadaptive-virtual-sftp/src/main/resources/webapp/upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/webapp/upload.html
@@ -4,6 +4,8 @@
 	</head>
 	<body>
 		<form enctype="multipart/form-data" action="/upload/public" method="POST">
+		    <label for="name">Your Name</label><input type="text" name="name">
+			<label for="email">Your Email</label><input type="email" name="email">
     		<input id="file" type="file" name="file"/>	
     		<input type="submit">
 		</form>
