--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -4,10 +4,10 @@
 <body>
 <div class="wrapper">
 <header webbits:id="com.jadaptive.app.ui.Header"></header>
-<main class="container mt-3">
-   <div class="row my-1">
+<main class="container my-auto">
+   <div id="uploadForm" class="row justify-content-center">
          <div class="col-8 offset-2">
-         	<form enctype="multipart/form-data" action="/upload/${view.shortCode}" method="POST">
+         	<form enctype="multipart/form-data" action="/upload/public/${view.shortCode}" method="POST">
       
 		    <div class="form-group">
 		       <label class="col-form-label" for="name">Your Name</label><input type="text" name="name">
