--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:webbits="http://webbits.org/webbits"
-	webbits:depends="Bootstrap,Widgets,FontAwesome,FreeMarker">
+	webbits:depends="Bootstrap,Widgets,FreeMarker">
 <body>
 <div class="wrapper">
 <header webbits:id="com.jadaptive.app.ui.Header"></header>
