--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:webbits="http://webbits.org/webbits"
-	webbits:depends="Bootstrap,Widgets,FreeMarker">
+<html lang="en" xmlns:jad="http://jadaptive.com/jadaptive">
 <body>
 <div class="wrapper">
-<header webbits:id="com.jadaptive.app.ui.Header"></header>
+<header jad:id="header"></header>
 <main class="container my-auto">
    <div id="uploadForm" class="row justify-content-center">
          <div class="col-10">
             <div class="card">
          	   	<div class="card-header">Public Upload</div>
        			<div class="card-body">		
-         	<form enctype="multipart/form-data" action="/upload/public/${view.shortCode}" method="POST">
+         	<form enctype="multipart/form-data" action="/upload/public/${page.shortCode}" method="POST">
       
 		    <div class="form-group">
 		       <label class="col-form-label" for="name">Your Name</label><input type="text" name="name">
@@ -98,6 +97,6 @@
 		});
 	});
 </script>
-<footer webbits:id="com.jadaptive.app.ui.Footer"></footer>
+<footer jad:id="footer"></footer>
 </body>
 </html>
