--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
@@ -33,9 +33,9 @@
     	</table>
     	<div>
     		<input class="file-input" type="file" name="file" style="display: none;" />
-    	</div>Í
+    	</div>
     </div> 
 	<div class="form-group text-right">
-		<button class="btn btn-primary">Upload</button>
+		<button id="uploadButton" class="btn btn-primary"><i class="far fa-upload"></i>&nbsp;<span jad:bundle="default" jad:i18n="upload.name">Upload</span></button>
 	</div>
 </body>
