--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -22,7 +22,6 @@
 			</nav>
      	</div>
      	<div id="feedback" class="col-12">
-     	
      	</div>
      	<div class="col-4">
      		<div class="input-group mb-3">
@@ -32,7 +31,7 @@
 		</div>
 		<div class="col-4">
 			<div class="input-group mb-3">
-			  <input id="maximumFiles" type="number" step="50" class="form-control filter" value="" placeholder="Maximum Results (default 1000)" aria-label="The maximum number of files returned" aria-describedby="basic-addon3">
+			  <input id="maximumFiles" type="number" min="10" step="10" class="form-control filter" value="" placeholder="Maximum Results (default 1000)" aria-label="The maximum number of files returned" aria-describedby="basic-addon3">
 			  <span class="input-group-text" id="basic-addon3"><i class="far fa-battery-full"></i></span>
 			</div>
      	</div>
@@ -60,10 +59,8 @@
      		</table>
      	</div>
      	<div id="content" class="col-md-12 my-3">
-     	<form enctype="multipart/form-data" action="/upload/tree" method="POST">
      	    <input type="hidden" id="path" name="path" value="/">  
      	    <div id="uploadHolder" jad:id="uploadWidget" class="w-100"></div>
-     	 </form>
      	</div>
   </div>
 </main>
