--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:jad="http://jadaptive.com/jadaptive">
 <body>
-	
-	 <div class="col-12 dropzone text-muted text-center p-3 my-3" style="border: 1px dashed">
-		    	<div class="dropzoneClick"><i class="fas fa-cloud-upload-alt fa-5x p-1"></i></div>
-		    	<small>To upload multiple files drag and drop them here or click in the area to select a file from your computer.</small>
-    </div>	  
-    <div class="jfiles" style="display: none">
-    	<table class="table">
-    		<thead>
-    			<tr>
-	    			<th class="col-4">Filename</th>
-	    			<th class="col-2">Size</th>
-	    			<th class="col-5"></th>
-	    			<th class="col-1"></th>
-    			</tr>
-    		</thead>
-    		<tbody class="fileInputs">
-    			<tr class="ready">
-	    			<td class="filename"></td>
-	    			<td class="size"></td>
-	    			<td class="uploadProgress">
-	    				<div class="progress my-auto" style="display: none">
+	<form id="uploadForm" enctype="multipart/form-data" method="POST">
+		<div class="col-12 dropzone text-muted text-center p-3 my-3" style="border: 1px dashed">
+			  <div class="dropzoneClick"><i class="fas fa-cloud-upload-alt fa-5x p-1"></i></div>
+			  <small>To upload multiple files drag and drop them here or click in the area to select a file from your computer.</small>
+	    </div>	  
+	    <div class="jfiles" style="display: none">
+	    	<table class="table">
+	    		<thead>
+	    			<tr>
+		    			<th class="col-4">Filename</th>
+		    			<th class="col-2">Size</th>
+		    			<th class="col-5"></th>
+		    			<th class="col-1"></th>
+	    			</tr>
+	    		</thead>
+	    		<tbody class="fileInputs">
+	    			<tr class="ready">
+		    			<td class="filename"></td>
+		    			<td class="size"></td>
+		    			<td class="uploadProgress">
+		    				<div class="progress my-auto" style="display: none">
 								<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-	    			</td>
-	    			<td class="actions text-right">
-	    				<i class="far fa-trash-alt ready"></i>
-	    			</td>
-    			</tr>
-    		</tbody>
-    	</table>
-    	<div>
-    		<input class="file-input" type="file" name="file" style="display: none;" />
-    	</div>
-    </div> 
-	<div class="form-group text-right">
-		<button id="uploadButton" class="btn btn-primary"><i class="far fa-upload"></i>&nbsp;<span jad:bundle="default" jad:i18n="upload.name">Upload</span></button>
-	</div>
+							</div>
+		    			</td>
+		    			<td class="actions text-right">
+		    				<i class="far fa-trash-alt ready"></i>
+		    			</td>
+	    			</tr>
+	    		</tbody>
+	    	</table>
+	    	<div>
+	    		<input class="file-input" type="file" name="file" style="display: none;" />
+	    	</div>
+	    </div> 
+		<div class="form-group text-right">
+			<button id="uploadButton" class="btn btn-primary"><i class="far fa-upload"></i>&nbsp;<span jad:bundle="default" jad:i18n="upload.name">Upload</span></button>
+		</div>
+	</form>
 </body>
