--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
@@ -3,8 +3,13 @@
 <body>
 	<form id="uploadForm" enctype="multipart/form-data" method="POST">
 		<div class="col-12 dropzone text-muted text-center p-3 my-3" style="border: 1px dashed">
-			  <div class="dropzoneClick"><i class="fas fa-cloud-upload-alt fa-5x p-1"></i></div>
-			  <small>To upload multiple files drag and drop them here or click in the area to select a file from your computer.</small>
+			  <div class="dropzoneClick"><i id="uploadIcon" class="fas fa-cloud-upload-alt fa-5x p-1"></i></div>
+			  <small id="helpText">To upload multiple files drag and drop them here or click in the area to select a file from your computer.</small>
+			  <div id="uploadProgress" style="display: none">
+	   			<div class="progress mx-auto my-1 w-100">
+					<div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+				</div>
+		      </div>
 	    </div>	  
 	    <div class="jfiles" style="display: none">
 	    	<table class="table">
@@ -12,7 +17,6 @@
 	    			<tr>
 		    			<th class="col-4">Filename</th>
 		    			<th class="col-2">Size</th>
-		    			<th class="col-5"></th>
 		    			<th class="col-1"></th>
 	    			</tr>
 	    		</thead>
@@ -20,13 +24,8 @@
 	    			<tr class="ready">
 		    			<td class="filename"></td>
 		    			<td class="size"></td>
-		    			<td class="uploadProgress">
-		    				<div class="progress my-auto" style="display: none">
-								<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-							</div>
-		    			</td>
 		    			<td class="actions text-right">
-		    				<i class="far fa-trash-alt ready"></i>
+		    				<i class="far fa-trash-alt"></i>
 		    			</td>
 	    			</tr>
 	    		</tbody>
