--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -23,19 +23,22 @@
      	</div>
      	<div id="feedback" class="col-12">
      	</div>
-     	<div class="col-4">
+<!--      	<div class="col-md-12 my-3"> -->
+<!--      		<div class="row" id="mounts"></div> -->
+<!--      	</div> -->
+     	<div class="col-md-4">
      		<div class="input-group mb-3">
 			  <input id="filter" type="text" class="form-control filter" placeholder="Filter" aria-label="Current Directory Filter" aria-describedby="basic-addon2">
 			  <span class="input-group-text" id="basic-addon2"><i class="far fa-search"></i></span>
 			</div>
 		</div>
-		<div class="col-4">
+		<div class="col-md-4">
 			<div class="input-group mb-3">
 			  <input id="maximumFiles" type="number" min="10" step="10" class="form-control filter" value="" placeholder="Maximum Results (default 1000)" aria-label="The maximum number of files returned" aria-describedby="basic-addon3">
 			  <span class="input-group-text" id="basic-addon3"><i class="far fa-battery-full"></i></span>
 			</div>
      	</div>
-     	<div class="col-4">
+     	<div class="col-md-4">
 			<div id="searchDepthDropdown"></div>
      	</div>
      	<div class="col-12">
@@ -43,6 +46,8 @@
 			<input type="checkbox" class="filter" id="folders" name="folders" value="true" checked> <label class="mr-3" for="folders">Folders</label>
 			<input type="checkbox" class="filter" id="hidden" name="hidden" value="true" checked> <label class="mr-3" for="hidden">Hidden</label>
      	</div>
+     	
+     	<input type="hidden" id="path" name="path" value="">
      	<div id="content" class="col-md-12 my-3">
      		<table id="table" style="display: none;">
      			<thead>
@@ -55,12 +60,8 @@
      			</thead>
      		</table>
      	</div>
-     	<div class="col-md-12 my-3">
-     		<div class="row" id="mounts"></div>
-     	</div>
-     	<div id="content" class="col-md-12 my-3">
-     	    <input type="hidden" id="path" name="path" value="/">  
-     	    <div id="uploadHolder" jad:id="uploadWidget" class="w-100"></div>
+     	<div class="col-12 text-right">
+     		<a id="uploadFiles" href="/app/ui/upload-files/" class="btn btn-primary"><i class="far fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
      	</div>
   </div>
 </main>
