--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadWidget.html
@@ -14,7 +14,7 @@
 	    <div class="jfiles" style="display: none">
 	    	<table class="table">
 	    		<thead>
-	    			<tr>
+	    			<tr class="file-index">
 		    			<th class="col-4">Filename</th>
 		    			<th class="col-2">Size</th>
 		    			<th class="col-1"></th>
@@ -25,13 +25,13 @@
 		    			<td class="filename"></td>
 		    			<td class="size"></td>
 		    			<td class="actions text-right">
-		    				<i class="far fa-trash-alt"></i>
+		    				<a class="deleteFile"><i class="far fa-trash-alt"></i></a>
 		    			</td>
 	    			</tr>
 	    		</tbody>
 	    	</table>
 	    	<div>
-	    		<input class="file-input" type="file" name="file" style="display: none;" />
+	    		<input class="file-input file-index" type="file" name="file" style="display: none;" />
 	    	</div>
 	    </div> 
 		<div class="form-group text-right">
