WIP on setup wizard.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -23,9 +23,6 @@
      	</div>
      	<div id="feedback" class="col-12">
      	</div>
-<!--      	<div class="col-md-12 my-3"> -->
-<!--      		<div class="row" id="mounts"></div> -->
-<!--      	</div> -->
      	<div class="col-md-4">
      		<div class="input-group mb-3">
 			  <input id="filter" type="text" class="form-control filter" placeholder="Filter" aria-label="Current Directory Filter" aria-describedby="basic-addon2">
@@ -41,10 +38,19 @@
      	<div class="col-md-4">
 			<div id="searchDepthDropdown"></div>
      	</div>
-     	<div class="col-12">
+     	<div class="col-md-4">
 			<input type="checkbox" class="filter" id="files" name="files" value="true" checked> <label class="mr-3" for="files">Files</label>
 			<input type="checkbox" class="filter" id="folders" name="folders" value="true" checked> <label class="mr-3" for="folders">Folders</label>
 			<input type="checkbox" class="filter" id="hidden" name="hidden" value="true" checked> <label class="mr-3" for="hidden">Hidden</label>
+     	</div>
+     	<div class="col-md-4">
+     		<div class="input-group mb-3">
+			  <input id="createDirectory" type="text" class="form-control" placeholder="Create Folder" aria-label="Create Folder" aria-describedby="basic-addon4">
+			  <span class="input-group-text" id="basic-addon4"><i class="far fa-folder-plus"></i></span>
+			</div>
+     	</div>
+     	<div class="col-md-4">
+     	
      	</div>
      	
      	<input type="hidden" id="path" name="path" value="">
