Refactored (moved) create interface to ssh server project, used in VSFTP to create default interface during setup.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -16,6 +16,13 @@
      	</div>
      	<div id="feedback" class="col-12">
      	</div>
+     	<div class="col-12">
+     		<nav aria-label="breadcrumb">
+			  <ol id="breadcrumb" class="breadcrumb">
+			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="far fa-hdd"></i></a></li>
+			  </ol>
+			</nav>
+     	</div>
      	<div class="col-md-4">
      		<div class="input-group mb-3">
 			  <input id="filter" type="text" class="form-control filter" placeholder="Filter" aria-label="Current Directory Filter" aria-describedby="basic-addon2">
@@ -45,15 +52,8 @@
      	<div class="col-md-4">
      	
      	</div>
-     	<div class="col-12">
-     		<nav aria-label="breadcrumb">
-			  <ol id="breadcrumb" class="breadcrumb">
-			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="far fa-hdd"></i></a></li>
-			  </ol>
-			</nav>
-     	</div>
      	<input type="hidden" id="path" name="path" value="">
-     	<div id="content" class="col-md-12 my-3">
+     	<div id="content" class="col-md-12 mb-3">
      		<table id="table" style="display: none;">
      			<thead>
      			<tr>
