Ported to Bootstrap 5

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -12,17 +12,17 @@
       	<div class="col-12" id="feedback">
       	
       	</div>
-	    <div class="form-group"> 
-          <label for="name" class="col-form-label" jad:bundle="virtualFolder" jad:i18n="publicUpload.user.name">Name</label> 
+	    <div class="row"> 
+          <label for="name" class="form-label" jad:bundle="virtualFolder" jad:i18n="publicUpload.user.name">Name</label> 
           <input id="name" name="name" class="form-control" value="" type="text" required="true"> 
           <small class="form-text text-muted" jad:bundle="virtualFolder" jad:i18n="publicUpload.user.desc"></small> 
          </div>	
-	    <div class="form-group"> 
-          <label for="email" class="col-form-label" jad:bundle="virtualFolder" jad:i18n="publicUpload.email.name">Email</label> 
+	    <div class="row"> 
+          <label for="email" class="form-label" jad:bundle="virtualFolder" jad:i18n="publicUpload.email.name">Email</label> 
           <input id="email" name="email" class="form-control" value="" type="text" required="true"> 
           <small class="form-text text-muted" jad:bundle="virtualFolder" jad:i18n="publicUpload.email.desc"></small> 
          </div>
-<!-- 	    <div class="form-group"> -->
+<!-- 	    <div class="row"> -->
 <!-- 	       <input type="checkbox" name="receipt"><span>Email me a receipt when the upload has completed</span> -->
 <!-- 	    </div>	 -->
 	    <div id="uploadHolder" jad:id="uploadWidget" class="col-12 mb-3"></div>
