--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -39,9 +39,9 @@
 			<div id="searchDepthDropdown"></div>
      	</div>
      	<div class="col-md-4">
-			<input type="checkbox" class="filter" id="files" name="files" value="true" checked> <label class="mr-3" for="files">Files</label>
-			<input type="checkbox" class="filter" id="folders" name="folders" value="true" checked> <label class="mr-3" for="folders">Folders</label>
-			<input type="checkbox" class="filter" id="hidden" name="hidden" value="true" checked> <label class="mr-3" for="hidden">Hidden</label>
+			<input type="checkbox" class="filter" id="files" name="files" value="true" checked> <label class="me-3" for="files">Files</label>
+			<input type="checkbox" class="filter" id="folders" name="folders" value="true" checked> <label class="me-3" for="folders">Folders</label>
+			<input type="checkbox" class="filter" id="hidden" name="hidden" value="true" checked> <label class="me-3" for="hidden">Hidden</label>
      	</div>
      	<div class="col-md-4">
      		<div class="input-group mb-3">
@@ -65,7 +65,7 @@
      			</thead>
      		</table>
      	</div>
-     	<div class="col-12 text-right">
+     	<div class="col-12 text-end">
      		<a id="uploadFiles" href="/app/ui/upload-files/" class="btn btn-primary"><i class="far fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
      	</div>
   </div>
