Make an abstract implementation of upload handler for re-use. Ensure streams are closed and use InputStream.transferTo method instead of IOUtils.copy.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -43,7 +43,7 @@
 			var email = $('#email').val();
 			
 			if(name.trim() === '' || email.trim() === '') {
-				$('#feedback').append('<p class="alert alert-danger">Please provide your name and email address to upload the file.</p>');
+				$('#feedback').append('<p class="alert alert-danger"><i class="far fa-exclamation-circle"></i> Please provide your name and email address to upload the file.</p>');
 			}
 			fd.append("name", name);
 			fd.append("email", email);
