Fixed some fields.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
@@ -12,7 +12,11 @@
        		<h2 class="filename"></h2>
        		<p><i class="fad fa-file-archive fa-5x"></i></p>
        		<div class="col-8 offset-2">
-	         	<p jad:bundle="publicDownload" jad:i18n="download.instructions"></p>
+       			<textarea id="terms" class="w-100" rows="5"></textarea>
+       			<input type="checkbox" class="acceptedTerms" name="acceptedTerms"> <label class="acceptedTerms" jad:bundle="sharedFiles" jad:i18n="agree.text"></label>
+       		</div>
+       		<div class="mt-3 col-8 offset-2">
+	         	<p jad:bundle="sharedFiles" jad:i18n="download.instructions"></p>
 	         	<p class="ipAddress"></p>
 	         	<p><a id="downloadLink" class="btn btn-primary"><i class="far fa-download"></i> <span jad:bundle="default" jad:i18n="download.name"></span></a></p>
          	</div>
