Added support for server side feedback and arguments in i18n markup in HTML. Added upload complete page.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:jad="http://jadaptive.com/jadaptive">
+<html lang="en" xmlns:jad="https://jadaptive.com/jadaptive">
 <body>
 <div class="bg-light p-5 rounded-lg m-3">
   <h1 class="display-4" jad:bundle="publicUploadWizard" jad:i18n="setup.title"></h1>
