Lots of work on sharing.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -23,33 +23,33 @@
 			  </ol>
 			</nav>
      	</div>
-     	<div class="col-md-4">
+     	<div class="col-md-4 mb-1">
      		<div class="input-group mb-3">
 			  <input id="filter" type="text" class="form-control filter" placeholder="Filter" aria-label="Current Directory Filter" aria-describedby="basic-addon2">
 			  <span class="input-group-text" id="basic-addon2"><i class="far fa-search"></i></span>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4 mb-1">
 			<div class="input-group mb-3">
 			  <input id="maximumFiles" type="number" min="10" step="10" class="form-control filter" value="" placeholder="Maximum Results (default 1000)" aria-label="The maximum number of files returned" aria-describedby="basic-addon3">
 			  <span class="input-group-text" id="basic-addon3"><i class="far fa-battery-full"></i></span>
 			</div>
      	</div>
-     	<div class="col-md-4">
+     	<div class="col-md-4 mb-1">
 			<div id="searchDepthDropdown"></div>
      	</div>
-     	<div class="col-md-4">
+     	<div class="col-md-4 mb-1">
 			<input type="checkbox" class="filter" id="files" name="files" value="true" checked> <label class="me-3" for="files">Files</label>
 			<input type="checkbox" class="filter" id="folders" name="folders" value="true" checked> <label class="me-3" for="folders">Folders</label>
 			<input type="checkbox" class="filter" id="hidden" name="hidden" value="true" checked> <label class="me-3" for="hidden">Hidden</label>
      	</div>
-     	<div class="col-md-4">
-     		<div class="input-group mb-3">
-			  <input id="createDirectory" type="text" class="form-control" placeholder="Create Folder" aria-label="Create Folder" aria-describedby="basic-addon4">
-			  <span class="input-group-text" id="basic-addon4"><i class="far fa-folder-plus"></i></span>
+     		<div class="col-md-4 mb-1 writeActions">
+     			<div class="input-group mb-3">
+				  <input id="createDirectory" type="text" class="form-control" placeholder="Create Folder" aria-label="Create Folder" aria-describedby="basic-addon4">
+				  <span class="input-group-text" id="basic-addon4"><i class="far fa-folder-plus"></i></span>
+				</div>
 			</div>
-     	</div>
-     	<div class="col-md-4">
+     	<div class="col-md-4 mb-1">
      	
      	</div>
      	<input type="hidden" id="path" name="path" value="">
@@ -65,8 +65,10 @@
      			</thead>
      		</table>
      	</div>
-     	<div class="col-12 text-end">
-     		<a id="uploadFiles" href="/app/ui/upload-files/" class="btn btn-primary"><i class="far fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
+     	<div id="writeActions" class="row text-end">
+	     	<div class="col-md-12">
+	     		<a id="uploadFiles" href="/app/ui/upload-files/" class="writeActions btn btn-primary"><i class="far fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
+	     	</div>
      	</div>
   </div>
 </main>
