--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep3.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep3.html
@@ -19,7 +19,7 @@
 			 $.ajax({
 		           type: "POST",
 		           url: $('form').attr('action'),
-		           data: $("form").serialize(),
+		           data: JadaptiveUtils.serializeForm($("form")),
 		           contentType: $("form").attr('enctype'),
 		           dataType: 'json',
 		           success: function(data)
