Support in FileScheme for bundle. Fixes for upload areas.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadComplete.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadComplete.html
@@ -18,7 +18,7 @@
 	         	<p jad:bundle="virtualFolder" jad:i18n="uploadComplete.msg"></p>
          	</div>
          	<div class="col-12 px-3 mt-3">
-	         	<a href="/app/ui/incoming/${page.shortCode}"><i class="far fa-arrow-rotate-left"></i>&nbsp;<span jad:bundle="virtualFolder" jad:i18n="uploadMoreFiles.text"></span></a>
+	         	<a href="/app/ui/share/${page.shortCode}"><i class="far fa-arrow-rotate-left"></i>&nbsp;<span jad:bundle="virtualFolder" jad:i18n="uploadMoreFiles.text"></span></a>
          	</div>
 		</div>
          </div>
