--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
@@ -10,14 +10,14 @@
 		<form action="/app/api/form/setup/chooseFilesystem">
 			
 			<div class="col-md-12 mb-3">
-				<h3> <i class="far fa-users me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice1.header"></span></h3>
+				<h3> <i class="far fa-home me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice1.header"></span></h3>
 				<p class="mt-3"><input type="checkbox" class="choose" name="c1" value="1">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice1.paragraph"></span></p>
 			</div>
 
 			
 			<div class="col-md-12 mb-3">
-				<h3> <i class="far fa-home me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice2.header"></span></h3>
+				<h3> <i class="far fa-hdd me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice2.header"></span></h3>
 				<p class="mt-3"><input type="checkbox" class="choose" name="c2" value="2">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice2.paragraph"></span></p>
 			</div>
