--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PublicFileNotFound.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PublicFileNotFound.html
@@ -9,10 +9,10 @@
             <div class="card">
          	   	<div class="card-header"><span>Error</span><div class="float-end"></div></div>
        			<div class="card-body text-center">	
-       		<h2 jad:bundle="publicDownload" jad:i18n="notfound.text"></h2>
+       		<h2 jad:bundle="sharedFiles" jad:i18n="notfound.text"></h2>
        		<p><i class="fad fa-exclamation-triangle fa-5x"></i></p>
          	<div class="col-8 offset-2">
-	         	<p jad:bundle="publicDownload" jad:i18n="notfound.instructions"></p>
+	         	<p jad:bundle="sharedFiles" jad:i18n="notfound.instructions"></p>
 	         	<p class="ipAddress"></p>
          	</div>
 		</div>
