Fixes to file schemes; various VSFTP fixes.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -58,6 +58,7 @@
      			<thead>
      			<tr>
      				<th data-field="name" data-formatter="renderName">Name</th>
+     				<th data-field="lastModified" data-formatter="renderDate">Last Modified</th>
      				<th data-field="length" data-formatter="renderLength">Length</th>
      				<th data-formatter="renderPerms">Perms</th>
      				<th data-formatter="renderActions">Actions</th>
