Added multiple delete and multiple shares for current view.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -57,6 +57,7 @@
      		<table id="table" style="display: none;">
      			<thead>
      			<tr>
+     				<th data-checkbox="true"></th>
      				<th data-field="name" data-formatter="renderName">Name</th>
      				<th data-field="lastModified" data-formatter="renderDate">Last Modified</th>
      				<th data-field="length" data-formatter="renderLength">Length</th>
