--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
@@ -6,17 +6,18 @@
 <main class="container my-auto">
    <div class="row justify-content-center">
          <div class="col-10">
+            <div id="feedback"></div>
             <div class="card">
          	   	<div class="card-header"><span>Download</span><div class="float-end"></div></div>
        			<div class="card-body text-center">	
-       		<h2 class="filename"></h2>
-       		<p><i class="fad fa-file-archive fa-5x"></i></p>
-       		<div class="mt-3 col-8 offset-2">
-	         	<p jad:bundle="sharedFiles" jad:i18n="download.instructions"></p>
-	         	<p class="ipAddress"></p>
-	         	<p><a id="downloadLink" class="btn btn-primary"><i class="far fa-download"></i> <span jad:bundle="default" jad:i18n="download.name"></span></a></p>
-         	</div>
-		</div>
+				<h2 class="filename"></h2>
+	       		<p><i class="fad fa-file-archive fa-5x"></i></p>
+	       		<div class="mt-3 col-8 offset-2">
+		         	<p id="message" jad:bundle="sharedFiles" jad:i18n="download.instructions"></p>
+		         	<div id="information"></div>
+		         	<div id="downloadLinks"></div>
+	         	</div>
+			</div>
          </div>
          </div>
    </div>
