A bunch more style fixes in light of security context changes.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -54,7 +54,7 @@
      	</div>
      	<input type="hidden" id="path" name="path" value="">
      	<div id="content" class="col-md-12 mb-3">
-     		<table id="table" style="display: none;">
+     		<table id="table" class="d-none">
      			<thead>
      			<tr>
      				<th data-checkbox="true"></th>
