--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
@@ -11,26 +11,24 @@
 			
 			<div class="col-md-12 mb-3">
 				<h3> <i class="far fa-home me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice1.header"></span></h3>
-				<p class="mt-3 ms-5"><input type="checkbox" class="choose" name="c1" value="1">
+				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="1" checked>
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice1.paragraph"></span></p>
 			</div>
 
 			
 			<div class="col-md-12 mb-3">
 				<h3> <i class="far fa-hdd me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice2.header"></span></h3>
-				<p class="mt-3 ms-5"><input type="checkbox" class="choose" name="c2" value="2">
+				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="2">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice2.paragraph"></span></p>
 			</div>
 			
 			
 			<div class="col-md-12 mb-3">
 				<h3> <i class="far fa-clock me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice3.header"></span></h3>
-				<p class="mt-3 ms-5"><input type="checkbox" class="choose" name="c3" value="3">
+				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="3">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice3.paragraph"></span></p>
 			</div>
-			
-			
-			<input type="hidden" id="filesystemType" name="filesystemType" value="1">
+
 		</form>
 	</div>
 </div>
