--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:jad="https://jadaptive.com/jadaptive">
 <body>
 <div class="bg-light p-5 rounded-lg m-3">
-  <h1 class="display-4" jad:bundle="publicUploadWizard" jad:i18n="setup.title"></h1>
-  <p class="lead" jad:bundle="publicUploadWizard" jad:i18n="setup.info"></p>
+  <h1 class="display-4" jad:bundle="uploadForm" jad:i18n="setup.title"></h1>
+  <p class="lead" jad:bundle="uploadForm" jad:i18n="setup.info"></p>
   <hr class="my-4">
   <p><span jad:bundle="vendor" jad:i18n="product.name"></span> <span jad:bundle="vendor" jad:i18n="product.version"></span><br/>
   <span jad:bundle="vendor" jad:i18n="product.copyright"></span></p>
-  <a id="startButton" class="btn btn-success btn-lg" href="#" role="button"><i class="far fa-thumbs-up"></i> <span jad:bundle="publicUploadWizard" jad:i18n="setup.getStarted"></span></a>
+  <a id="startButton" class="btn btn-success btn-lg wizardStart" href="#" role="button"><i class="far fa-thumbs-up"></i> <span jad:bundle="uploadForm" jad:i18n="setup.getStarted"></span></a>
 </div>
 </body>
 </html>
