--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep1.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep1.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:jad="https://jadaptive.com/jadaptive">
 <body>
 <div class="col-12">
-	<p class="alert alert-info"><i class="far fa-info"></i> <span jad:bundle="publicUploadWizard" jad:i18n="selectName.desc"></span></p>
+	<p class="alert alert-info"><i class="far fa-info"></i> <span jad:bundle="uploadForm" jad:i18n="selectName.desc"></span></p>
 </div>
 <div id="feedback" class="col-12"></div>
 <div class="col-12" id="content">
-<div class="col-12" jad:id="objectRenderer" jad:handler="publicUploadWizard" jad:resourceKey="publicUploadName"></div>
+<div class="col-12" jad:id="objectRenderer" jad:handler="uploadForm" jad:resourceKey="publicUploadName"></div>
 </div>
 <div>
 </div>
