--- a/jadaptive-virtual-sftp/src/main/resources/defaultMessages/shareDownload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/defaultMessages/shareDownload.html
@@ -1,3 +1,3 @@
-<p>The file $[filename] has just been accessed.</p>
+<p>The file ${filename} has just been accessed.</p>
 
-<p>The IP address that accessed the file was $[ipAddress].</p>
+<p>The IP address that accessed the file was ${ipAddress}.</p>
