Refactor of UI API to allow products without the private jadaptive-web-management plugin.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/MountReport.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/MountReport.html
@@ -7,7 +7,7 @@
    <div class="row justify-content-center">
          <div id="content" class="col-10 text-center">
             <input type="hidden" name="uuid" id="uuid" value="">
-			<i class="fa fa-regular fa-spin fa-spinner fa-4x"></i>
+			<i class="fa-solid fa-solid fa-spin fa-spinner fa-4x"></i>
 			<p class="text-muted mt-3"><small jad:bundle="virtualFolder" jad:i18n="collectingReport.text"></small>            
 		</div>
    </div>
