--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PasswordProtectedPage.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PasswordProtectedPage.html
@@ -7,7 +7,7 @@
    <div class="row">
          <div class="col-10 offset-1">
             <div class="card">
-         	   	<div class="card-header"><i class="far fa-key"></i>&nbsp;<span jad:bundle="sharedFiles" jad:i18n="passwordProtected.text"></span></div>
+         	   	<div class="card-header"><i class="fa-solid fa-key"></i>&nbsp;<span jad:bundle="sharedFiles" jad:i18n="passwordProtected.text"></span></div>
        			<div class="card-body">	
        				<div id="feedback"></div>
 					<form id="uploadForm" enctype="application/form-url-encoded" method="POST" action="/app/ui/password-protected/${page.shortCode}/${page.filename}">
@@ -19,7 +19,7 @@
 				    	</div>
 			         </div>	
 			         <div class="col-12 text-end">
-						<button type="submit" class="btn btn-primary"><i class="far fa-chevron-double-right"></i>&nbsp;<span jad:bundle="default" jad:i18n="next.name"></span></button>
+						<button type="submit" class="btn btn-primary"><i class="fa-solid fa-chevron-double-right"></i>&nbsp;<span jad:bundle="default" jad:i18n="next.name"></span></button>
 					</div>
 			        </form>
 				</div>
