--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PublicFileNotFound.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/PublicFileNotFound.html
@@ -10,7 +10,7 @@
          	   	<div class="card-header"><span>Error</span><div class="float-end"></div></div>
        			<div class="card-body text-center">	
        		<h2 jad:bundle="sharedFiles" jad:i18n="notfound.text"></h2>
-       		<p><i class="fad fa-exclamation-triangle fa-5x"></i></p>
+       		<p><i class="fa-duotone fa-exclamation-triangle fa-5x"></i></p>
          	<div class="col-8 offset-2">
 	         	<p jad:bundle="sharedFiles" jad:i18n="notfound.instructions"></p>
 	         	<p class="ipAddress"></p>
