--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -6,7 +6,7 @@
 <main class="container mt-3">
   <div class="row">
 	<ol class="breadcrumb col-12">
-	  <li class="breadcrumb-item"><a href="/app/ui/dashboard">Home</a></li>
+	  <li class="breadcrumb-item"><a href="/app/ui/">Home</a></li>
 	   <li class="breadcrumb-item active"><span jad:bundle="virtualFolder" jad:i18n="browseFiles.name"></span></li>
 	</ol>
   </div>
@@ -19,20 +19,20 @@
      	<div class="col-12">
      		<nav aria-label="breadcrumb">
 			  <ol id="breadcrumb" class="breadcrumb">
-			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="far fa-hdd"></i></a></li>
+			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="fa-solid fa-hdd"></i></a></li>
 			  </ol>
 			</nav>
      	</div>
      	<div class="col-md-4 mb-1">
      		<div class="input-group mb-3">
 			  <input id="filter" type="text" class="form-control filter" placeholder="Filter" aria-label="Current Directory Filter" aria-describedby="basic-addon2">
-			  <span class="input-group-text" id="basic-addon2"><i class="far fa-search"></i></span>
+			  <span class="input-group-text" id="basic-addon2"><i class="fa-solid fa-search"></i></span>
 			</div>
 		</div>
 		<div class="col-md-4 mb-1">
 			<div class="input-group mb-3">
 			  <input id="maximumFiles" type="number" min="10" step="10" class="form-control filter" value="" placeholder="Maximum Results (default 1000)" aria-label="The maximum number of files returned" aria-describedby="basic-addon3">
-			  <span class="input-group-text" id="basic-addon3"><i class="far fa-battery-full"></i></span>
+			  <span class="input-group-text" id="basic-addon3"><i class="fa-solid fa-battery-full"></i></span>
 			</div>
      	</div>
      	<div class="col-md-4 mb-1">
@@ -46,7 +46,7 @@
      		<div class="col-md-4 mb-1 writeActions">
      			<div class="input-group mb-3">
 				  <input id="createDirectory" type="text" class="form-control" placeholder="Create Folder" aria-label="Create Folder" aria-describedby="basic-addon4">
-				  <span class="input-group-text" id="basic-addon4"><i class="far fa-folder-plus"></i></span>
+				  <span class="input-group-text" id="basic-addon4"><i class="fa-solid fa-folder-plus"></i></span>
 				</div>
 			</div>
      	<div class="col-md-4 mb-1">
@@ -69,7 +69,7 @@
      	</div>
      	<div id="writeActions" class="row text-end">
 	     	<div class="col-md-12">
-	     		<a id="uploadFiles" href="/app/ui/upload-files/" class="writeActions btn btn-primary"><i class="far fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
+	     		<a id="uploadFiles" href="/app/ui/upload-files/" class="writeActions btn btn-primary"><i class="fa-solid fa-upload"></i> <span jad:bundle="virtualFolder" jad:i18n="uploadFiles.names"></span></a>
 	     	</div>
      	</div>
   </div>
