--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadComplete.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadComplete.html
@@ -10,7 +10,7 @@
    <div class="row justify-content-center">
          <div class="col-10">
             <div class="card">
-         	   	<div class="card-header"><i class="far fa-thumbs-up"></i><span jad:bundle="virtualFolder" jad:i18n="uploadComplete.header"></span></div>
+         	   	<div class="card-header"><i class="fa-solid fa-thumbs-up"></i><span jad:bundle="virtualFolder" jad:i18n="uploadComplete.header"></span></div>
        			<div class="card-body text-center">	
        		<h2 jad:bundle="virtualFolder" jad:i18n="uploadComplete.text"></h2>
        		
@@ -18,7 +18,7 @@
 	         	<p jad:bundle="virtualFolder" jad:i18n="uploadComplete.msg"></p>
          	</div>
          	<div class="col-12 px-3 mt-3">
-	         	<a href="/app/ui/incoming/${page.shortCode}"><i class="far fa-arrow-rotate-left"></i>&nbsp;<span jad:bundle="virtualFolder" jad:i18n="uploadMoreFiles.text"></span></a>
+	         	<a href="/app/ui/incoming/${page.shortCode}"><i class="fa-solid fa-arrow-rotate-left"></i>&nbsp;<span jad:bundle="virtualFolder" jad:i18n="uploadMoreFiles.text"></span></a>
          	</div>
 		</div>
          </div>
