--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadFiles.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/UploadFiles.html
@@ -6,7 +6,7 @@
 <main class="container mt-3">
   <div class="row">
 	<ol class="breadcrumb col-12">
-	  <li class="breadcrumb-item"><a href="/app/ui/dashboard">Home</a></li>
+	  <li class="breadcrumb-item"><a href="/app/ui/">Home</a></li>
 	   <li class="breadcrumb-item active"><span jad:bundle="virtualFolder" jad:i18n="uploadFiles.name"></span></li>
 	</ol>
   </div>
@@ -17,7 +17,7 @@
      	<div class="col-12">
      		<nav aria-label="breadcrumb">
 			  <ol id="breadcrumb" class="breadcrumb">
-			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="far fa-hdd"></i></a></li>
+			    <li class="breadcrumb-item active"><a class="clickPath" href="/"><i class="fa-solid fa-hdd"></i></a></li>
 			  </ol>
 			</nav>
      	</div>
