--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStart.html
@@ -7,7 +7,7 @@
   <hr class="my-4">
   <p><span jad:bundle="vendor" jad:i18n="product.name"></span> <span jad:bundle="vendor" jad:i18n="product.version"></span><br/>
   <span jad:bundle="vendor" jad:i18n="product.copyright"></span></p>
-  <a id="startButton" class="btn btn-success btn-lg wizardStart" href="#" role="button"><i class="far fa-thumbs-up"></i> <span jad:bundle="uploadForm" jad:i18n="setup.getStarted"></span></a>
+  <a id="startButton" class="btn btn-success btn-lg wizardStart" href="#" role="button"><i class="fa-solid fa-thumbs-up"></i> <span jad:bundle="uploadForm" jad:i18n="setup.getStarted"></span></a>
 </div>
 </body>
 </html>
