--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/setup/ChooseFilesystemSetup.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:jad="https://jadaptive.com/jadaptive">
 <body>
 <div class="col-12">
-	<p class="alert alert-info"><i class="far fa-info"></i> <span jad:bundle="chooseFilesystem" jad:i18n="chooseFilesystem.summary"></span></p>
+	<p class="alert alert-info"><i class="fa-solid fa-info"></i> <span jad:bundle="chooseFilesystem" jad:i18n="chooseFilesystem.summary"></span></p>
 </div>
 <div id="feedback" class="col-12"></div>
 <div class="row mt-5" id="content">
@@ -10,21 +10,21 @@
 		<form action="/app/api/form/setup/chooseFilesystem">
 			
 			<div class="col-md-12 mb-3">
-				<h3> <i class="far fa-home me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice1.header"></span></h3>
+				<h3> <i class="fa-solid fa-home me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice1.header"></span></h3>
 				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="1" checked>
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice1.paragraph"></span></p>
 			</div>
 
 			
 			<div class="col-md-12 mb-3">
-				<h3> <i class="far fa-hdd me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice2.header"></span></h3>
+				<h3> <i class="fa-solid fa-hdd me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice2.header"></span></h3>
 				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="2">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice2.paragraph"></span></p>
 			</div>
 			
 			
 			<div class="col-md-12 mb-3">
-				<h3> <i class="far fa-clock me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice3.header"></span></h3>
+				<h3> <i class="fa-solid fa-clock me-3"></i><span jad:bundle="chooseFilesystem" jad:i18n="choice3.header"></span></h3>
 				<p class="mt-3 ms-5"><input type="radio" class="choose jad-radio-input" name="filesystemType" value="3">
 				<span jad:bundle="chooseFilesystem" jad:i18n="choice3.paragraph"></span></p>
 			</div>
