--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/DownloadPublicFile.html
@@ -11,7 +11,7 @@
          	   	<div class="card-header"><span>Download</span><div class="float-end"></div></div>
        			<div class="card-body text-center">	
 				<h2 class="filename"></h2>
-	       		<p><i class="fad fa-file-archive fa-5x"></i></p>
+	       		<p><i class="fa-duotone fa-file-archive fa-5x"></i></p>
 	       		<div class="mt-3 col-8 offset-2">
 		         	<p id="message" jad:bundle="sharedFiles" jad:i18n="download.instructions"></p>
 		         	<div id="information"></div>
