--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/TermsAndConditionsPage.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/TermsAndConditionsPage.html
@@ -7,7 +7,7 @@
    <div class="row justify-content-center">
          <div class="col-md-10">
             <div class="card">
-         	   	<div class="card-header"><i class="far fa-gavel"></i>&nbsp;<span jad:bundle="sharedFiles" jad:i18n="acceptTerms.text"></span></div>
+         	   	<div class="card-header"><i class="fa-solid fa-gavel"></i>&nbsp;<span jad:bundle="sharedFiles" jad:i18n="acceptTerms.text"></span></div>
        			<div class="card-body">	
        				<div id="feedback"></div>
 					<form id="uploadForm" enctype="application/form-url-encoded" method="POST" action="/app/ui/download-terms/${page.shortCode}/${page.filename}">
@@ -23,7 +23,7 @@
 				    	</div>
 			         </div>	
 			         <div class="col-12 text-end">
-						<button type="submit" class="btn btn-primary"><i class="far fa-chevron-double-right"></i>&nbsp;<span jad:bundle="default" jad:i18n="next.name"></span></button>
+						<button type="submit" class="btn btn-primary"><i class="fa-solid fa-chevron-double-right"></i>&nbsp;<span jad:bundle="default" jad:i18n="next.name"></span></button>
 					</div>
 			        </form>
 				</div>
