--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Upload.html
@@ -7,7 +7,7 @@
    <div id="uploadForm" class="row justify-content-center">
          <div class="col-10">
             <div class="card">
-         	   	<div class="card-header"><i class="far fa-upload"></i>&nbsp;<span id="uploadArea"></span> <span jad:bundle="default" jad:i18n="upload.name"></span></div>
+         	   	<div class="card-header"><i class="fa-solid fa-upload"></i>&nbsp;<span id="uploadArea"></span> <span jad:bundle="default" jad:i18n="upload.name"></span></div>
        			<div class="card-body">		
       	<div class="col-12" id="feedback">
       	
