--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep2.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/PublicUploadStep2.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:jad="https://jadaptive.com/jadaptive">
 <body>
 <div class="col-12">
-	<p class="alert alert-info"><i class="far fa-info"></i> <span jad:bundle="uploadForm" jad:i18n="selectMount.summary"></span></p>
+	<p class="alert alert-info"><i class="fa-solid fa-info"></i> <span jad:bundle="uploadForm" jad:i18n="selectMount.summary"></span></p>
 </div>
 <div id="feedback" class="col-12"></div>
 <div class="col-12" id="content">
