--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/UploadFormComplete.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/wizards/UploadFormComplete.html
@@ -7,10 +7,10 @@
    <div class="row justify-content-center">
        <div class="col-md-8">
            <div class="card">
-                <div class="card-header"><i class="fa fa-wand-magic"></i> <span jad:bundle="uploadForm" jad:i18n="wizard.name"></span></div>
+                <div class="card-header"><i class="fa-solid fa-wand-magic"></i> <span jad:bundle="uploadForm" jad:i18n="wizard.name"></span></div>
                 <div class="card-body">
                		<div class="row my-3">
-               			<div class="col-12 text-center"><i class="far fa-4x fa-check-circle text-success"></i></div>
+               			<div class="col-12 text-center"><i class="fa-solid fa-4x fa-check-circle text-success"></i></div>
                		</div>
                    <div class="row my-3">
                			<div class="col-12 text-center"><span jad:bundle="virtualFolder" jad:i18n="publicUpload.complete"></span></div>
