WIP on customer portal.

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/Tree.html
@@ -3,16 +3,10 @@
 <body>
 <div class="wrapper">
 <header jad:id="header"></header>
-<main class="container mt-3">
-  <div class="row">
-	<ol class="breadcrumb col-12">
-	  <li class="breadcrumb-item"><a href="/app/ui/">Home</a></li>
-	   <li class="breadcrumb-item active"><span jad:bundle="virtualFolder" jad:i18n="browseFiles.name"></span></li>
-	</ol>
-  </div>
+<main class="container mt-5">
     <div class="row w-100 h-100">
      	<div class="col-12">
-     		<h2 jad:bundle="virtualFolder" jad:i18n="browseFiles.name">Browser Files</h2>
+     		<h2 jad:bundle="virtualFolder" jad:i18n="browseFiles.name">Browse Files</h2>
      	</div>
      	<div id="feedback" class="col-12">
      	</div>
