Implementation of quota in SendTo

--- a/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/SendToPage.html
+++ b/jadaptive-virtual-sftp/src/main/resources/com/jadaptive/plugins/ssh/vsftp/ui/SendToPage.html
@@ -12,6 +12,7 @@
 				<div class="col-12">
 					<h4 class="text-success" jad:bundle="virtualFolder" jad:i18n="sendTo.info"></h4>
 				</div>
+				<div id="quota"></div>
 				<div id="content" class="col-md-12 my-3">
 					<div id="uploadHolder" jad:id="uploadWidget" class="w-100"></div>
 				</div>
